# cert-agent

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  docker-compose.yml  env.example  install-demo.sh
.github/workflows/: build-and-release.yml  ci.yml  docker-arm64.yml  docker-multiplatform.yml  docker.yml  env.yml
client/: Cargo.toml  build.rs
client/src/: main.rs
config/: default.toml
debian/: cert-agent.service  changelog  config  control  copyright  postinst  postrm  preinst  prerm  rules  templates
proto/: cert_agent.proto
scripts/: build-packages.sh  setup-git.sh
src/: certificate.rs  config.rs  error.rs  grpc.rs  main.rs  redis_client.rs  watcher.rs
